plugins {
    id 'com.android.application'
}

android {
    namespace 'moe.shuvi.schemesinterceptor'
    compileSdk 37

    defaultConfig {
        applicationId 'moe.shuvi.schemesinterceptor'
        minSdk 24
        targetSdk 37
        versionCode 1
        versionName '1.0'
    }

    buildTypes {
        debug {
            // Debug artifacts are signed automatically with the debug keystore.
        }
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }

    splits {
        abi {
            enable true
            reset()
            include 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'
            universalApk true
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
}

androidComponents {
    onVariants(selector().all()) { variant ->
        variant.outputs.forEach { output ->
            def abi = output.filters.find { it.filterType.name() == 'ABI' }?.identifier
            def architecture = abi == null
                    ? 'Universal'
                    : [
                            'armeabi-v7a': 'ARMv7',
                            'arm64-v8a' : 'ARMv8',
                            'x86'       : 'x86',
                            'x86_64'    : 'x86_64'
                    ][abi] ?: abi
            output.outputFileName.set("app-${architecture}-${variant.buildType}.apk")
        }
    }
}


apply from: rootProject.file('gradle/scheme-manifest.gradle')

dependencies {
    implementation 'androidx.appcompat:appcompat:1.8.0'
    implementation 'androidx.recyclerview:recyclerview:1.4.0'
    implementation 'com.google.android.material:material:1.14.0'
}
